--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $color-grey-light-1:#f7f7f7;
 $color-grey-light-2:#eee;
 
 $color-grey-dark: #888;
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
 $color-white: darken(#fff, 4%);
 $color-black: #000;
 
