--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -25,6 +25,19 @@
   margin-top: -9rem;
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
+  
 
 
 }
+
+.section-stories {
+  position: relative;
+  padding: 15rem 0;
+  
+}
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom,  $color-primary-light, $color-primary-dark);
+}
+
