--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -19,5 +19,7 @@
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/navigation';
+@import 'layout/popup';
 
 @import 'pages/home';
