start adding media queries

--- a/Natours/starter/sass/abstracts/_mixins.scss
+++ b/Natours/starter/sass/abstracts/_mixins.scss
@@ -12,3 +12,33 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+
+// MEDIA QUERY MANAGER
+/*
+0 - 600px:      Phone
+600 - 900px:    Tablet Portrait  - phone
+900 - 1200px    Tablet Landscape - tab-port
+[1200 - 1800]   Regular Desktop  - tab-land   
+1800px+         Big Desktop      - big-desktop   
+
+Order: Base + Typography > general layout + grid > page layout > components
+
+*/
+
+@mixin respond ($breakpoint) {
+    // in media queries one should always use em. 1em = 16px
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em){ @content}; // 600px/16=37.5em
+    }
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em){ @content}; // 900px/16=56.25
+    }
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em){ @content}; // 1200px/16 = 75em
+    }
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em){ @content}; // 1800px/16 = 112.5em
+    }
+}
+
