--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -17,8 +17,26 @@
 }
 
 html {
-  // this defines what 1rem is (based on 16px)
-  font-size: 62.5%;
+  // this defines what 1rem is (based on 16px) (16px is default in most browsers
+  font-size: 62.5%; // 1rem=10px (10/16)
+
+  
+  @include respond(tab-land){ // width < 1200
+    font-size: 56.25%; // 1rem= 9px, 9/16 = 56.25%
+  }
+
+  @include respond(tab-port){ // width < 900
+    font-size: 50%; // 1rem= 8px, 8/16 = 50%
+  }
+  
+  // @include respond(phone){ // 
+  //   font-size: 43.75%; // 1rem= 7px, 7/16 = 43.75%
+  // }
+
+
+  @include respond(big-desktop){
+    font-size: 75%; // 1rem=12px , 12/16 = 75%
+  }
 }
 
 /* let's set some overall font properties
@@ -26,4 +44,8 @@ html {
 body {
   padding: 3rem;
   box-sizing: border-box;
+
+  @include respond(tab-port){ // width < 900
+    padding: 0;
+  }  
 }
