--- a/Natours/starter/sass/components/_feature-box.scss
+++ b/Natours/starter/sass/components/_feature-box.scss
@@ -2,6 +2,11 @@
     background-color: rgba($color-white, .8);
     font-size: 1.5rem;
     padding: 2.5rem;
+
+    @include respond(tab-port){
+        padding: 2rem;
+    }
+
     text-align: center;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
@@ -9,10 +14,15 @@
     // transform: skewY(7deg);
     &__icon{
         font-size: 6rem;
+        margin-bottom: .5rem;
         display: inline-block;
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         -webkit-background-clip: text ;
         color: transparent;        
+
+        @include respond(tab-port){
+            margin-bottom: 0;
+        }
     }
 
     &:hover {
