--- a/Natours/starter/sass/layout/_footer.scss
+++ b/Natours/starter/sass/layout/_footer.scss
@@ -2,10 +2,18 @@
     background-color: $color-grey-dark-3;
     padding: 10rem 0;
     font-size: 1.4rem;
+
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
     
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+
+        @include respond(tab-port) {
+            margin-bottom: 4rem;
+        }
     }
 
     &__logo {
@@ -18,6 +26,11 @@
         padding-top: 2rem;
         // An inline block does not occupy 100% of its available width, only the one that the content needs.
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -55,6 +68,11 @@
         border-top: 1px solid $color-grey-dark;
         width: 80%;
         float: right;
+
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
 
 
