--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -1,7 +1,11 @@
 .section-about{
     background-color: $color-grey-light-1;
-    padding: 25rem 0;
+    padding: 30rem 0;
     margin-top: -20vh;
+
+    @include respond(tab-port) {
+      padding: 25rem 0;
+    }
 }
 
 .section-features {
@@ -19,6 +23,10 @@
     & > * {
       transform: skewY(7deg);
     }
+
+    @include respond(tab-port) {
+      padding: 15rem 0;
+    }
 }
 
 .section-tours {
@@ -26,13 +34,19 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   
-
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 
 }
 
 .section-stories {
   position: relative;
   padding: 15rem 0;
+
+  @include respond(tab-port) {
+    padding: 10rem 0 ;
+  }
   
 }
 
