--- a/Natours/starter/sass/components/_composition.scss
+++ b/Natours/starter/sass/components/_composition.scss
@@ -1,67 +1,67 @@
 .composition {
-    position: relative;
+  position: relative;
 
-    &__photo {
-        width:55%;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
-        border-radius: 2px;
-        position: absolute;
-        z-index: 10;
-        // outline has similarities with the border
-        // with the exception it has a offset
-        outline-offset: 2rem;
-        transition: transform .3s;
+  &__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+    // outline has similarities with the border
+    // with the exception it has a offset
+    outline-offset: 2rem;
+    transition: transform 0.3s;
 
-        @include respond(tab-port) {
-            float: left;
-            position: relative;
-            width: 33.3333333%;
-            box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
-        }
- 
-        &--p1 {
-            left:0;
-            top:-2rem;
-
-            @include respond(tab-port) {
-                top: 0;
-                transform: scale(1.2)
-            }
-        }
-
-        &--p2 {
-            right:0;
-            top: 2rem;
-
-            @include respond(tab-port) {
-                top: -2rem;
-                transform: scale(1.3);
-                z-index:100;
-            }
-        }
-
-        &--p3 {
-            left: 20%;
-            top: 10rem;
-
-            @include respond(tab-port) {
-                top: 1rem;
-                left:0;
-                transform: scale(1.1)
-            }
-        }
-
-        &:hover {
-            // show the outline like a border with offset (see parent)
-            outline: 1.5rem solid $color-primary;
-            transform: scale(1.05);
-            box-shadow: 0 2.5rem 4rem rgba($color-black, .4);
-            z-index: 20;
-        }
+    @include respond(tab-port) {
+      float: left;
+      position: relative;
+      width: 33.3333333%;
+      box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
     }
 
-    // select the images that are not hovered
-    &:hover &__photo:not(:hover){
-        transform: scale(.95);
+    &--p1 {
+      left: 0;
+      top: -2rem;
+
+      @include respond(tab-port) {
+        top: 0;
+        transform: scale(1.2);
+      }
     }
+
+    &--p2 {
+      right: 0;
+      top: 2rem;
+
+      @include respond(tab-port) {
+        top: -2rem;
+        transform: scale(1.3);
+        z-index: 100;
+      }
+    }
+
+    &--p3 {
+      left: 20%;
+      top: 10rem;
+
+      @include respond(tab-port) {
+        top: 1rem;
+        left: 0;
+        transform: scale(1.1);
+      }
+    }
+
+    &:hover {
+      // show the outline like a border with offset (see parent)
+      outline: 1.5rem solid $color-primary;
+      transform: scale(1.05);
+      box-shadow: 0 2.5rem 4rem rgba($color-black, 0.4);
+      z-index: 20;
+    }
+  }
+
+  // select the images that are not hovered
+  &:hover &__photo:not(:hover) {
+    transform: scale(0.95);
+  }
 }
