--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -1,66 +1,69 @@
 .story {
-    width:75%;
-    margin: 0 auto;
-    background-color: rgba($color-white, .6);
-    box-shadow: 0 3rem 6rem rgba($color-black, .3);
-    padding: 6rem;
-    padding-left: 9rem;
-    font-size: $default-font-size;
-    transform: skewX(-12deg);
+  width: 75%;
+  margin: 0 auto;
+  background-color: rgba($color-white, 0.6);
+  box-shadow: 0 3rem 6rem rgba($color-black, 0.3);
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: $default-font-size;
+  transform: skewX(-12deg);
 
-    & > * {
-        transform: skewX(12deg);
+  & > * {
+    transform: skewX(12deg);
+  }
+
+  &__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    background-color: orangered;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    // to create a space between the circular shape and text
+    // use transform
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      border-radius: none;
     }
+  }
 
-    &__shape {
-        width: 15rem;
-        height: 15rem;
-        float: left;
-        background-color: orangered;
+  &__image {
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: all 0.5s;
+  }
 
+  &__text {
+    transform: skewX(12deg);
+  }
 
-        -webkit-shape-outside:circle(50% at 50% 50%);
-        shape-outside: circle(50% at 50% 50%);
-        -webkit-clip-path: circle(50% at 50% 50%);
-        clip-path: circle(50% at 50% 50%);
+  &__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: $color-white;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden;
+  }
 
-        // to create a space between the circular shape and text
-        // use transform
-        transform: translateX(-3rem) skewX(12deg);
-        position: relative;
-    }
+  &:hover &__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
 
-    &__image{
-        height: 100%;
-        transform: translateX(-4rem) scale(1.4);
-        backface-visibility: hidden;
-        transition: all .5s;
-    }
-
-    &__text {
-        transform: skewX(12deg);
-    }
-
-    &__caption {
-        position: absolute;
-        top:50%;
-        left:50%;
-        transform : translate(-50%, 20%);
-        color:$color-white;
-        text-transform: uppercase;
-        font-size: 1.7rem;
-        opacity: 0;
-        transition: all .5s;
-        backface-visibility: hidden;
-    }
-
-    &:hover &__caption {
-        opacity: 1;
-        transform : translate(-50%, -50%);
-    }
-
-    &:hover &__image {
-        transform: translateX(-4rem) scale(1);
-        filter: blur(3px) brightness(80%) ;
-    }
-}   
+  &:hover &__image {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%);
+  }
+}
