--- a/Natours/starter/sass/abstracts/_mixins.scss
+++ b/Natours/starter/sass/abstracts/_mixins.scss
@@ -1,18 +1,17 @@
-@mixin clearfix{
-    &::after {
-        content:"";
-        display: table;
-        clear: both;
-    }
+@mixin clearfix {
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
-@mixin screencenter{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+@mixin screencenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-
 
 // MEDIA QUERY MANAGER
 /*
@@ -26,19 +25,26 @@ Order: Base + Typography > general layout + grid > page layout > components
 
 */
 
-@mixin respond ($breakpoint) {
-    // in media queries one should always use em. 1em = 16px
-    @if $breakpoint == phone {
-        @media (max-width: 37.5em){ @content}; // 600px/16=37.5em
-    }
-    @if $breakpoint == tab-port {
-        @media (max-width: 56.25em){ @content}; // 900px/16=56.25
-    }
-    @if $breakpoint == tab-land {
-        @media (max-width: 75em){ @content}; // 1200px/16 = 75em
-    }
-    @if $breakpoint == big-desktop {
-        @media (min-width: 112.5em){ @content}; // 1800px/16 = 112.5em
-    }
+@mixin respond($breakpoint) {
+  // in media queries one should always use em. 1em = 16px
+  @if only screen and $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content;
+    } // 600px/16=37.5em
+  }
+  @if only screen and $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    } // 900px/16=56.25
+  }
+  @if only screen and $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content;
+    } // 1200px/16 = 75em
+  }
+  @if only screen and $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      @content;
+    } // 1800px/16 = 112.5em
+  }
 }
-
