--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -20,21 +20,21 @@ html {
   // this defines what 1rem is (based on 16px) (16px is default in most browsers
   font-size: 62.5%; // 1rem=10px (10/16)
 
-  
-  @include respond(tab-land){ // width < 1200
+  @include respond(tab-land) {
+    // width < 1200
     font-size: 56.25%; // 1rem= 9px, 9/16 = 56.25%
   }
 
-  @include respond(tab-port){ // width < 900
+  @include respond(tab-port) {
+    // width < 900
     font-size: 50%; // 1rem= 8px, 8/16 = 50%
   }
-  
-  // @include respond(phone){ // 
+
+  // @include respond(phone){ //
   //   font-size: 43.75%; // 1rem= 7px, 7/16 = 43.75%
   // }
 
-
-  @include respond(big-desktop){
+  @include respond(big-desktop) {
     font-size: 75%; // 1rem=12px , 12/16 = 75%
   }
 }
@@ -45,7 +45,13 @@ body {
   padding: 3rem;
   box-sizing: border-box;
 
-  @include respond(tab-port){ // width < 900
+  @include respond(tab-port) {
+    // width < 900
     padding: 0;
-  }  
+  }
+}
+// change the text selected effect
+::selection {
+  background-color: $color-primary;
+  color: $color-white;
 }
