--- a/Natours/starter/sass/components/_buttons.scss
+++ b/Natours/starter/sass/components/_buttons.scss
@@ -46,12 +46,12 @@
     color: $color-white;
 
     &::after {
-      background-color:$color-primary-light;
+      background-color: $color-primary-light;
     }
   }
 
   &::after {
-    content: '';
+    content: "";
     display: inline-block;
     height: 100%;
     width: 100%;
@@ -71,27 +71,25 @@
 
 .btn-text {
   &:link,
-  &:visited{
+  &:visited {
     font-size: $default-font-size;
-    color:$color-primary;
-    display:inline-block;
+    color: $color-primary;
+    display: inline-block;
     text-decoration: none;
     border-bottom: 1px solid $color-primary;
-    padding:3px;
-    transition: all .2s;
-    
+    padding: 3px;
+    transition: all 0.2s;
   }
 
-  &:hover{
+  &:hover {
     background-color: $color-primary;
     color: $color-white;
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
     transform: translateY(-2px);
   }
 
-  &:active{
-    box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
     transform: translateY(0);
   }
-
 }
