--- a/Natours/starter/sass/layout/_header.scss
+++ b/Natours/starter/sass/layout/_header.scss
@@ -18,10 +18,9 @@
 
   // media query by device resolution
   // media queries are always in em
-  @media (min-resolution: 192dpi) and (min-width: 37.5em),
-    (-webkit-min-device-ratio: 2) and (min-width: 37.5em),
-    (min-width: 125em),
-    (min-width: 125em) {
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (-webkit-min-device-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
     // 192 is the resolution apple retina
     background-image: linear-gradient(
         to right bottom,
